# graphonauts

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
benchmarks/load/arangodb/2026-04-08_22-55-37/: arangodb.json
benchmarks/load/dgraph/2026-04-09_08-42-34/: dgraph.json
benchmarks/load/dgraph/2026-04-09_10-22-10/: dgraph.json
benchmarks/load/memgraph/2026-04-07_16-37-31/: memgraph.json
benchmarks/load/neo4j/2026-04-07_11-14-57/: neo4j.json
benchmarks/load/neo4j/2026-04-08_10-37-46/: neo4j.json
benchmarks/memory/arangodb/aggregation/1/2026-04-09_00-47-23/: memory.json
benchmarks/memory/arangodb/aggregation/2/2026-04-09_00-47-42/: memory.json
benchmarks/memory/arangodb/join/1/2026-04-09_00-48-40/: memory.json
benchmarks/memory/arangodb/join/2/2026-04-09_00-52-34/: memory.json
benchmarks/memory/arangodb/join/3/2026-04-09_01-03-11/: memory.json
benchmarks/memory/arangodb/join/4/2026-04-09_01-08-52/: memory.json
benchmarks/memory/arangodb/join/5/2026-04-09_01-09-32/: memory.json
benchmarks/memory/arangodb/join/6/2026-04-09_01-10-10/: memory.json
benchmarks/memory/arangodb/join/7/2026-04-09_01-10-31/: memory.json
benchmarks/memory/arangodb/modification/1/2026-04-09_01-10-50/: memory.json
benchmarks/memory/arangodb/modification/2/2026-04-09_01-11-13/: memory.json
benchmarks/memory/arangodb/modification/3/2026-04-09_01-11-39/: memory.json
benchmarks/memory/arangodb/selection/1/2026-04-09_01-12-02/: memory.json
benchmarks/memory/arangodb/selection/2/2026-04-09_01-12-22/: memory.json
benchmarks/memory/arangodb/selection/3/2026-04-09_01-12-47/: memory.json
benchmarks/memory/arangodb/selection/4/2026-04-09_01-13-20/: memory.json
benchmarks/memory/arangodb/set/1/2026-04-09_01-13-51/: memory.json
benchmarks/memory/arangodb/set/2/2026-04-09_01-14-12/: memory.json
notes/: arangodb.md  memgraph.md  nebulagraph.md  neo4j.md
notes/dgraph/: join-3.md
notes/memgraph/: disk-exhaustion.md
notes/neo4j/: notes.md
notes/neo4j/plans/txt/: with-index-plan.txt  without-index-plan.txt
src/arangodb/: README.md  client.py  docker-compose.yml  load.py  main.py  queries.py  storage_info.py  storage_summary.md
src/graphonauts/: __init__.py  __main__.py  cli.py
src/graphonauts/arangodb_db/: __init__.py  client.py  docker-compose.yml  loader.py  queries.py  verify.py
src/graphonauts/base/: __init__.py  client.py  config.py  index_helpers.py  loader.py  query.py  results.py  tpch.py  verify.py
src/graphonauts/commands/: __init__.py  _common.py  benchmark.py  compare.py  load.py  save.py  summarize.py  verify.py
src/graphonauts/dgraph_db/: __init__.py  client.py  docker-compose.yml  loader.py  queries.py  verify.py
src/graphonauts/memgraph_db/: __init__.py  client.py  docker-compose.yml  loader.py  queries.py  verify.py
src/graphonauts/neo4j_db/: __init__.py  client.py  docker-compose.yml  loader.py  queries.py  verify.py
src/memgraphdb/: README.md  client.py  docker-compose.yml  load.py  queries.py
src/nebulagraph/: README.md  client.py  load.py  queries.py
src/neo4jdb/: README.md  client.py  docker-compose.yml  load.py  queries.py
src/orientdb/: README.md
src/utils/: __init__.py  container_manager.py  memory_monitor.py  printer.py  time_monitor.py
(+2060 files in other folders)
