[tool.poetry]
name = "graphonauts"
version = "0.1.0"
description = ""
authors = ["Ivona Oboňová <ivonaobonova@gmail.com>"]
packages = [
    {include = "neo4jdb", from = "src"},
    {include = "memgraphdb", from = "src"},
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
# Neo4j
neo4j = "^5.23.0"
# ArangoDB
python-arango-async = "^1.0.2"
# OrientDB
pyorient = "^1.5.5"
# NebulaGraph
nebula3-python = "3.8.3"
prettytable = "^3.16.0"
# TypeDB
typedb-driver = "^2.28.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
